--- a/myanimelist.css
+++ b/myanimelist.css
@@ -2,8 +2,9 @@
     font-family: "Roboto", sans-serif !important;
 }
 
-.fa {
-    font: normal normal normal 14px/1 FontAwesome !important;
+.fa, .fas, .fa-solid, .fa-regular {
+    /*font: normal normal normal 14px/1 FontAwesome !important;*/
+    font-family: 'Font Awesome 6 Pro' !important;
     font-size: inherit !important;
 }
 
@@ -27,6 +28,16 @@
     --bgcolor: 24, 25, 28;
     --selected: 205, 97, 33;
     --inversecolor: 255, 255, 255;
+}
+
+@media (max-width:1280px) {
+    .status-menu-container .status-menu::before {
+        visibility: hidden;
+    }
+    
+    .list-unit {
+        width: 800px !important;
+    }
 }
 
 /**
@@ -364,35 +375,36 @@ a {
 }
 
 .header {
-    background-color: rgba(23, 23, 26, 0.2);
     position: absolute;
     top: 0;
     left: 0;
-    right: 0;
-    width: auto;
-    margin: none;
-    padding: 0 20px;
-    z-index: 1;
+    z-index: 100;
+    width: 100%;
+    height: 42px;
+    background: rgba(24, 25, 28, 0.2);
+    box-shadow: 0 0 1.5px 3px rgba(0, 0, 0, 0.2);
     backdrop-filter: blur(2px);
 }
 
 .header .header-title {
-    position: absolute;
-    top: 21px;
-    background-position: left top;
-    background-repeat: no-repeat;
-    background-size: auto 36px;
-    display: block;
-    width: 240px;
-    height: 36px;
-    text-indent: -9999px;
-    overflow: hidden;
+    top: 9px;
+    left: 42px;
+    width: 44px;
+    height: 24px;
+    background: url(https://files.catbox.moe/8q5kjg.svg) left 4px / auto 20px no-repeat;
+    opacity: 0.94;
+    transition: all var(--timeButton) var(--bezierFast);
 }
 
 .header .header-menu {
-    position: absolute;
-    top: 25px;
-    right: 4px;
+    position: static;
+    display: flex;
+    height: 32px;
+    margin: 5px 12px 0 0;
+    flex-flow: column nowrap;
+    justify-content: center;
+    float: right;
+    line-height: 13px;
 }
 .header .header-menu.other {
     top: 18px;
@@ -403,6 +415,7 @@ a {
     text-align: right;
     font-size: 16px;
     margin-right: 20px;
+    color: white;
 }
 
 .header .header-menu .header-info {
@@ -410,10 +423,12 @@ a {
     margin-top: 6px;
     margin-right: 15px;
     text-align: right;
+    color: rgba(255, 255, 255, 0.75) !important;
 }
 
 .header .username {
     font-weight: bold;
+    color: white;
 }
 
 .header .header-menu .list-menu {
@@ -474,7 +489,6 @@ a {
 .list-menu-float {
     position: sticky;
     display: block;
-    top: 525px;
     top: 45px;
     z-index: 2;
     display: flex;
@@ -684,6 +698,7 @@ a {
     margin-right: auto;
     margin-left: auto;
     text-align: left;
+    min-height: 100vh;
 }
 
 /**
@@ -933,13 +948,13 @@ a {
     position: relative;
     display: table;
     background-color: transparent;
-    width: 1024px;
+    width: 100%;
     height: 38px;
 }
 
 .list-unit .list-status-title:before {
     position: absolute;
-    content: "CSS made by Sincopse myself :3";
+    content: "CSS made by Sincopse";
     left: 92px;
     top: 12px;
     font-size: 1.2em;
@@ -949,7 +964,7 @@ a {
 
 .list-unit .list-status-title .text {
     display: table-cell;
-    width: 1024px;
+    width: 100%;
     height: 38px;
     font-size: 2em;
     color: rgb(var(--txtcolor));
