--- a/myanimelist.css
+++ b/myanimelist.css
@@ -16,18 +16,20 @@
     --bgcolor: 237, 241, 245;
     --selected: 61, 180, 242;
     --inversecolor: 32, 33, 36;
+    --border: none;
 }
     .list-table { box-shadow: 0 2px 20px rgb(49 54 68 / 9%); }
 */
 
 /*! Dark Theme */
 :root {
-    --maincolor: 24, 25, 28;
+    --maincolor: 19, 20, 22;
     --secondarycolor: 32, 33, 36;
     --txtcolor: 159, 173, 189;
-    --bgcolor: 24, 25, 28;
+    --bgcolor: 19, 20, 22;
     --selected: 205, 97, 33;
     --inversecolor: 255, 255, 255;
+    --border: 2px solid white;
 }
 
 @media (max-width:1280px) {
@@ -819,6 +821,7 @@ a {
     position: relative;
     z-index: 2;
     box-shadow: 0 -25px 25px 0px rgba(0, 0, 0, 0.25);
+    border-top: var(--border);
 }
 
 .status-menu-container.fixed {
@@ -954,7 +957,7 @@ a {
 
 .list-unit .list-status-title:before {
     position: absolute;
-    content: "CSS made by Sincopse";
+    content: "CSS made by Sincopse myself :3";
     left: 92px;
     top: 12px;
     font-size: 1.2em;
